--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Publish Release
 
 on:
-  workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [ closed ]
-    branches: [ master ]
+    branches: [ "master" ]
 
 permissions:
   contents: read
